--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,6 +5,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body, html {
       height: 100vh;
       width: 100%;
