--- a/estilos/style.css
+++ b/estilos/style.css
@@ -127,17 +127,17 @@ section h1 {
 .containerLanche {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    background-color: #000;
+    background-color: #000;    
 }
 
 
 
 .lanche {
     display: flex;
-    align-items: center;
     flex-basis: 30%;
+    align-items: center;
     background-color: #fff;
-    margin: 2px;
+    margin: 5px;
     padding: 5px;
     border-radius: 10px;
     border: 1px solid #ccc;
@@ -156,6 +156,10 @@ section button {
 }
 
  .carrinho {
+    position: absolute;
+    top: 100px;
+    right: 20px;
+    z-index: 1000;
     max-width: 500px;
     margin: 50px auto;
     padding: 20px;
@@ -164,6 +168,12 @@ section button {
     text-align: center;
     box-shadow: 0px 0px 10px #fff;
     border-radius: 10px;
+}
+
+.carrinho.fixado {
+    position: fixed;
+    top: 0;
+    right: 0;
 }
 
 .carrinho a {
